k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - phpapp.fashionxlab.com
      secretName: phpapp-tls
  rules:
    - host: phpapp.fashionxlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-app-servicex
                port:
                  number: 80
